--- a/DataHelper/DataHelper/DataHelper.csproj
+++ b/DataHelper/DataHelper/DataHelper.csproj
@@ -174,6 +174,12 @@
     <None Include="packages.config" />
     <None Include="sysconfig.ini" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NLogManager\NLogManager.csproj">
+      <Project>{2b18e15b-8795-42b2-b752-093011ab56f0}</Project>
+      <Name>NLogManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
